--- a/1/Presentation/Archive_PC.html
+++ b/1/Presentation/Archive_PC.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>The Renaissance (Archive - Clean)</title>
+  <title>The Renaissance 1(Archive)</title>
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
   <style>
     /* 基本リセット */
